<resources>
    <string name="app_name">Event Application Amura</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Sign up</string>
    <string name="btn_link_to_login">Already registered. Login</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">Please enter your registered Email Id to reset password.</string>
    <string name="addEvent">Add Event</string>
    <string name="eventName">Name of Event</string>
    <string name="agenda">Agenda</string>
    <string name="eventAdded">Event added successfully!</string>
    <string name="addingEvent">Adding Event</string>
    <string name="logout">Log out</string>
    <string name="events">Events</string>
    <string name="email_empty">Enter email address!</string>
    <string name="password_empty">Enter password!</string>
    <string name="signup">SIGN UP</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sent_request">We have sent you request to reset your password!</string>
    <string name="fail_sent_request">Failed to send reset email request!</string>
    <string name="customer_info">Customer Information</string>
    <string name="hint_first_name">First Name *</string>
    <string name="hint_last_name">Last Name *</string>
    <string name="hint_dob">Date of Birth</string>
    <string name="hint_mobile_no">Mobile No *</string>
    <string name="hint_continue">Continue</string>
    <string name="hint_home_number">Home Number</string>
    <string name="hint_email_id">Email ID</string>
    <string name="hint_whats_app_no">Whatsapp Number</string>
    <string name="hint_work_no">Work Number</string>
    <string name="hint_alter_email_id">Alternative Email ID</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="hint_choose_project">Choose Project *</string>
    <string name="hint_customer_type">Choose Customer Type</string>
    <string name="hint_ChooseBuyingPlan">ChooseBuyingPlan</string>
    <string name="hint_choose_budget_detail">Choose Budget Details</string>
    <string name="hint_ChooseLooking">Choose Looking For</string>
    <string name="hint_choose_residence">Choose Residence Type</string>
    <string name="hint_residence_location">Residence Location</string>
    <string name="hint_jobProfile">Job Profile</string>
    <string name="hint_DecisionMaker">Decision Maker</string>
</resources>

