<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateProfileTwoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_16sdp"
            app:cardElevation="@dimen/_16sdp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_32sdp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/profile"
                    android:textAllCaps="true"
                    android:textColor="#212121"
                    android:textSize="@dimen/_16sdp" />

                <Button
                    android:id="@+id/btnChooseResidenceType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_choose_residence"
                    android:layout_marginBottom="@dimen/_16sdp"
                    android:background="@drawable/edit_text_background"
                    android:textColor="#212121"
                    android:drawableRight="@android:drawable/arrow_down_float"/>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_16sdp">

                    <EditText
                        android:id="@+id/txtResidenceLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:hint="@string/hint_residence_location"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPostalAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_16sdp">

                    <EditText
                        android:id="@+id/txtJobProfile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:hint="@string/hint_jobProfile"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textAutoComplete"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_16sdp">

                    <EditText
                        android:id="@+id/txtDecisionMaker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:hint="@string/hint_DecisionMaker"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textAutoComplete"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </ScrollView>
</RelativeLayout>

